# nuerosim

./: CMakeLists.txt  Dockerfile.api  Dockerfile.worker  Dockerfile.worker.gpu  README.md  START.bat  TECHNICAL_DOCUMENTATION.md  deployment.yaml  docker-compose.yml  experiments.yaml  hh_cuda.cu  neurosim-ci.yml  pyproject.toml  run_dashboard.py  test_integration.py  test_neuron_models.py
python/api/: celery_app.py  main.py
python/neurosim/: cli.py
python/neurosim/analysis/: spike_analysis.py
python/neurosim/models/: ion_channels.py  neuron.py  plasticity.py
python/neurosim/simulation/: distributed.py  engine.py  optimization.py
python/pipeline/: ingestion.py
python/visualization/: dashboard.py
